syntax = "proto3";
package main;
option go_package = "github.com/vovka1200/test1;main";
import "google/api/annotations.proto";

service TestService {

  rpc Test (TestRequest) returns (TestReply) {
    option (google.api.http) = {
      get: "/test"
    };
  }

}

message TestRequest {
  string inn = 1;
}

message TestReply {
  string inn = 1;
  string title = 2;
  string kpp = 3;
  string director = 4;
}